<resources>
    <string name="app_name">App_Radion_Button</string>
    <string name="button">Button</string>
    <string name="txt_PrimerValor">Ingresa el primer valor</string>
    <string name="txt_SegundoValor">Ingresa el segundo valor</string>
    <string name="rb1">Sumar</string>
    <string name="rb2">Restar</string>
    <string name="Button">Calcular</string>
    <string name="TextView_resultado">Resultado</string>

</resources>